@@ -1224,7 +1224,7 @@ test_dynamic_indexing_model_internal <- function(param) {
             expect_true(is.Cmodel(cm), info = "compiled model object improperly formed")
             expect_identical(calculate(m), calculate(cm), info = "problem with R vs. C calculate with initial indexes")
             for(i in seq_along(param$validIndexes)) {
-                for(j in seq_along(param$invalidIndexes[[i]]$var)) {
+                for(j in seq_along(param$validIndexes[[i]]$var)) {
                     m[[param$validIndexes[[i]]$var[j]]] <- param$validIndexes[[i]]$value[j]
                     cm[[param$validIndexes[[i]]$var[j]]] <- param$validIndexes[[i]]$value[j]
                 }
@@ -1245,8 +1245,10 @@ test_dynamic_indexing_model_internal <- function(param) {
                     cm[[param$invalidIndexes[[i]]$var[j]]] <- param$invalidIndexes[[i]]$value[j]
                 }
                 ## use expect_equal not expect_identical because in certain cases we get NA not NaN (having to do with other components of calc/sim output)
-                if(is.na(param$invalidIndexes[[i]]$value[j]) || (!is.null(param$invalidIndexes[[i]]$expect_NA_in_if) && param$invalidIndexes[[i]]$expect_NA_in_if)) {
-                    expect_error(calculate(m), "missing value where", info = paste0("problem with lack of error in R calculate with NA indexes, case: ", i)) ## When NA is given, R calculate fails with missing value and dynamic index error not flagged explicitly
+                if(any(is.na(param$invalidIndexes[[i]]$value)) || (!is.null(param$invalidIndexes[[i]]$expect_R_calc_error) && param$invalidIndexes[[i]]$expect_R_calc_error)) {
+                    expect_error(calculate(m), "(missing value where|argument is of length zero)", info = paste0("problem with lack of error in R calculate with NA indexes, case: ", i))
+                    ## When NA is given, R calculate fails with missing value and dynamic index error not flagged explicitly
+                    ## When 0 is the nested index, R calculate fails with length zero argument and dynamic index error not flagged
                 } else {
                     expect_output(out <- calculate(m), "dynamic index out of bounds", info = paste0("problem with lack of warning in R calculate with non-NA invalid indexes, case: ", i))
                     expect_equal(out, NaN, info = paste0("problem with lack of NaN in R calculate with non-NA invalid indexes, case: ", i))
